--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbb6b9e0990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff5b52d0a10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb6b3e0e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbb6b3e0fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff5b5042d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff5b5373e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb6bc68650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbb6bc68850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff5b561a3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff5b55b86d0&gt;]</pre>
 </div>
 
 </div>
