--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca6d3e7f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa8e80a3550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca6d417bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca6d417dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa8e80e8cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa8e80e8f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca6d663550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca6d663750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa8e8652510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa8e8652750&gt;]</pre>
 </div>
 
 </div>
