--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4940e61450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffa053e7f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4940ea7b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4940ea7d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa05110c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffa05110e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4941411490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4941411690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa05678590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffa05678790&gt;]</pre>
 </div>
 
 </div>
