--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffa053e7f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f01e25d6a50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa05110c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffa05110e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f01e1fc3d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f01e1fc3f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa05678590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffa05678790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f01e284f610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f01e284f810&gt;]</pre>
 </div>
 
 </div>
