--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f40f064b550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7244be0950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f40f06b5c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f40f06b5e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f72448eeb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f72448eed50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f40f0c1f5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f40f0c1f7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7244e58450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7244e58650&gt;]</pre>
 </div>
 
 </div>
