--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7244be0950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7051a038d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f72448eeb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f72448eed50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7051a48c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7051a48e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7244e58450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7244e58650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7051c91590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7051c91790&gt;]</pre>
 </div>
 
 </div>
