--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f24c3686d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9327b4ae90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f24c30e5c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f24c30e5ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9327870dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9327870fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f24c3976550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f24c3976790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f93280f3710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f93280f3910&gt;]</pre>
 </div>
 
 </div>
