--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7aced9d810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff2e739d890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7aceac9b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7aceac9d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2e73e3c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2e73e3e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7acf0344d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7acf0346d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2e794c590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2e794c790&gt;]</pre>
 </div>
 
 </div>
