--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb2a7b13c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd7b2c3cc10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb2a7872e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb2a7872fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7b2c6cc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd7b2c6ce50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb2a7ddd790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb2a7ddd990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7b31d5550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd7b31d5750&gt;]</pre>
 </div>
 
 </div>
