--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f130f3150d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd3338de710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f130efe6cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f130efe6ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd333602b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd333602d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f130f5e65d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f130f593810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd333b6d410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd333b6d650&gt;]</pre>
 </div>
 
 </div>
