--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2cc675ff90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe39a50b450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cc618ed90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2cc618ef90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe39a541d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe39a541f50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cc6a6b4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2cc6a15890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe39a785650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe39a785850&gt;]</pre>
 </div>
 
 </div>
