--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9350aa0a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5d9ef44950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9350dc7cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9350dc7ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d9ec86c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5d9ec86e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9351336590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9351336790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5d9f517510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5d9f517710&gt;]</pre>
 </div>
 
 </div>
