--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fde9fa08590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0cb54f6850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fde9f6c8d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fde9f6c8f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0cb4f1cc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0cb4f1ce90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fde9fc94650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fde9fc94850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0cb57ad590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0cb57ad790&gt;]</pre>
 </div>
 
 </div>
