--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd2c539e650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbdeca24a90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2c5036d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd2c5036f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdeca5acd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbdeca5aed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2c55f6750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd2c55f6950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbdecc9f4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbdecc9f6d0&gt;]</pre>
 </div>
 
 </div>
