--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb982c2cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3131411450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb97fcde10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb97fcdfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3131145ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3131145cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb98554750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb98554950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f31319d56d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f31319d58d0&gt;]</pre>
 </div>
 
 </div>
