--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd85816e210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc15a570710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd857f05c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd857ed5f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc15a5ccb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc15a5ccd50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd858452510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd85845c810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc15ab35410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc15ab35610&gt;]</pre>
 </div>
 
 </div>
