--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f923e5b2c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8a9d545410&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f923e60ec90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f923e60ee90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a9d26bc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8a9d26be10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f923eb76650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f923eb76850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a9d7d5490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8a9d7d5690&gt;]</pre>
 </div>
 
 </div>
