--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9770cd0e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb838efa50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f97709e9b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f97709e9d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb83609c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb83609e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9770f53490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9770f53690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb83b73610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb83b73810&gt;]</pre>
 </div>
 
 </div>
