--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb57a2e0710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f842b171a50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb57a002890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb579ce4ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f842ab5bd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f842ab5bf50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb57a5b7a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb57a56b3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f842b440b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f842b3f3890&gt;]</pre>
 </div>
 
 </div>
