--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f842b171a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f654c75b1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f842ab5bd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f842ab5bf50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f654c477d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f654c477b10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f842b440b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f842b3f3890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f654c9e0690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f654c9e0490&gt;]</pre>
 </div>
 
 </div>
