--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3a86193110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1b0cdc4950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a85ba7d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a85ba7f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1b0caf93d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1b0caebf50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a86430710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a86430910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1b0d0bf210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1b0d05b810&gt;]</pre>
 </div>
 
 </div>
