--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc9e9d49390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f44edff8e90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9e9d8fad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9e9d8fcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f44ed9e6e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f44ed9e6fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc9ea2f9410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc9ea2f9610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f44ee2716d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f44ee2718d0&gt;]</pre>
 </div>
 
 </div>
